[tool.poetry]
name = "lesson4"
version = "0.1.0"
description = ""
authors = ["jc86 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
jupytext = "^1.13.4"
nbformat = "^5.1.3"
PyYAML = "^6.0"
toml = "^0.10.2"
Markdown = "^3.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
